# buckshot-lambda

./: .env.example  .env.public  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  create_layer.sh  install  lambda_function.py  model.py  push-ecr.sh  pyproject test.toml  pyproject.toml  requirements.txt  test.sh
lib/: print_return.py
