[project]
name = "buckshot-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
	"speciesnet>=5.0.3",
	"opencv-python-headless",
	"setuptools<81.0.0",
]

# dependencies = ["speciesnet>=4.0.0"]

[tool.uv]
# resolution = "lowest-direct"
exclude-dependencies = ["opencv-python"]
# no-build = true
# environments = ["sys_platform == 'linux' and platform_machine == 'arm64'"]
# override-dependencies = ["opencv-python-headless"]

# [tool.uv.sources]
# opencv-python = { package = "opencv-python-headless" }
